--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'kodilla-course'
 include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-exception'
-
+include 'kodilla-good-pattern'
+include 'kodilla-good-patterns'
 
