--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,6 @@ rootProject.name = 'kodilla-course'
 include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-exception'
+include 'kodilla-good-patterns'
+include 'kodilla-good-patterns'
+
