--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'kodilla-testing'
 include 'kodilla-stream'
 include 'kodilla-exception'
 include 'kodilla-good-patternss'
+include 'kodilla-patterns'
 
