--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,5 @@ include 'kodilla-patterns'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
 include 'kodilla-jdbc'
+include 'kodilla-hibernate'
 
