--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,5 @@ include 'kodilla-hibernate'
 include 'kodilla-spring-web'
 include 'kodilla-rps'
 include 'kodilla-patterns2'
+include 'kodilla-testing2'
 
