--- a/settings.gradle
+++ b/settings.gradle
@@ -12,4 +12,5 @@ include 'kodilla-spring-web'
 include 'kodilla-rps'
 include 'kodilla-patterns2'
 include 'kodilla-testing2'
+include 'kodilla-sudoku'
 
