--- a/kodilla-testing/build.gradle
+++ b/kodilla-testing/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation 'junit:junit:4.13.2'
     implementation 'org.jetbrains:annotations:23.0.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
     testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.3.1'
 }
