--- a/kodilla-testing/build.gradle
+++ b/kodilla-testing/build.gradle
@@ -10,14 +10,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'junit:junit:4.13.2'
-    implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    implementation 'junit:junit:4.13.2'
-    implementation 'org.jetbrains:annotations:23.0.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.3.1'
+    implementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+
+    // https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter
+    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.0.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
 }
 
 test {
